--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "name": "partition-record",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "TypeScript utility to partition a record in 2",
-  "keywords": [
-    "typescript",
-    "utility",
-    "partition",
-    "object",
-    "record",
-    "generic"
-  ],
+  "keywords": ["typescript", "utility", "partition", "object", "record", "generic"],
   "author": "leumasic",
   "license": "MIT",
   "repository": {
@@ -26,12 +19,7 @@
       "import": "./dist/mjs/wrapper.mjs"
     }
   },
-  "files": [
-    "package.json",
-    "README.md",
-    "LICENSE",
-    "dist/"
-  ],
+  "files": ["package.json", "README.md", "LICENSE", "dist/"],
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "test": "vitest run --passWithNoTests",
